[package]
name = "zk-pub-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
fuzzy-matcher = "0"
gloo = "0"
log = "0"
reqwasm = "0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
wasm-logger = "0"
web-sys = "0"
wee_alloc = "0"
yew = "0.19"
zk-pub-models = { path = "../zk-pub-models" }
