[package]
name = "zk-pub-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-pub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
comrak = { version = "0", default-features = false, features = ["syntect"] }
include_dir = "0"
serde_json = "1"
zk-pub-models = { path = "../zk-pub-models" }
